Document, and allow Travis failures on, SQLite3 problems with AR 3.1.x, or AR 3.2.x on MRI 1.8.7.

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,3 +29,7 @@ matrix:
             env: OBJECTID_COLUMNS_AR_TEST_VERSION=4.0.2 OBJECTID_COLUMNS_TRAVIS_CI_DATABASE_TYPE=postgres
         -   rvm: 1.8.7
             env: OBJECTID_COLUMNS_AR_TEST_VERSION=4.0.2 OBJECTID_COLUMNS_TRAVIS_CI_DATABASE_TYPE=sqlite
+    allow_failures:
+        -   env: OBJECTID_COLUMNS_AR_TEST_VERSION=3.1.12 OBJECTID_COLUMNS_TRAVIS_CI_DATABASE_TYPE=sqlite
+        -   rvm: 1.8.7
+            env: OBJECTID_COLUMNS_AR_TEST_VERSION=3.2.16 OBJECTID_COLUMNS_TRAVIS_CI_DATABASE_TYPE=sqlite
